--- a/ProjekatWeb/WebContent/WEB-INF/web.xml
+++ b/ProjekatWeb/WebContent/WEB-INF/web.xml
@@ -19,4 +19,7 @@
     <servlet-name>Login</servlet-name>
     <url-pattern>/Login</url-pattern>
   </servlet-mapping>
+  <listener>
+    <listener-class>projekatWeb.servlets.InitListener</listener-class>
+  </listener>
 </web-app>
