Created dinamic video page

--- a/ProjekatWeb/WebContent/WEB-INF/web.xml
+++ b/ProjekatWeb/WebContent/WEB-INF/web.xml
@@ -42,4 +42,14 @@
     <servlet-name>GetVideosServlet</servlet-name>
     <url-pattern>/GetVideosServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>VideoServlet</display-name>
+    <servlet-name>VideoServlet</servlet-name>
+    <servlet-class>projekatWeb.servlets.VideoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VideoServlet</servlet-name>
+    <url-pattern>/VideoServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
